RESOLVED FIXED 259301
[IPC] Don't unwrap invalid SendSyncResult replies
https://bugs.webkit.org/show_bug.cgi?id=259301
Summary [IPC] Don't unwrap invalid SendSyncResult replies
Dan Glastonbury
Reported 2023-07-17 20:35:40 PDT
Add extra checking to SendSyncResult::succeeded so we don't unwrap invalid SendSyncResult replies.
Attachments
Dan Glastonbury
Comment 1 2023-07-17 20:35:57 PDT
Dan Glastonbury
Comment 2 2023-07-17 20:52:16 PDT
EWS
Comment 3 2023-07-18 17:12:05 PDT
Committed 266147@main (5d3f12cc83da): <https://commits.webkit.org/266147@main> Reviewed commits have been landed. Closing PR #15901 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.